# CCTP-Project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: bunny.glb  low-poly-sphere.glb  smooth-monkey.glb  sphere.glb  stanford-bunny-high-res.glb  stanford-bunny.glb  test-obj.glb  torus.glb
shaders/: core.glsl  default.frag  default.vert  fullscreen.vert  lights.glsl  modelData.glsl  pbr.glsl  sdfPointCloud.frag  sdfRenderer.frag  shaders.cmake  skybox.frag  skybox.vert  sprite.frag  sprite.glsl  sprite.vert  unlit.frag
shaders/containers/: stack.glsl
shaders/gizmos/: wireframe.frag  wireframe.vert
shaders/pointcloud/: pointCloud.frag  pointCloud.glsl  pointCloud.vert
shaders/primitives/: cube.glsl  quad.glsl
shaders/sdf/: operations.glsl  sdf.glsl
shaders/sdfvoxelgrid/: computeJumpFlooding.comp  computeNaiveDist.comp  computeShared.glsl  computeTriDist.comp  voxelRaymarch.frag
shaders/ui/: ui.frag  ui.glsl  ui.vert  uiBlit.frag
src/: main.cpp  pch.hpp
src/application/: Application.cpp  Application.hpp  ApplicationInfo.hpp
src/containers/: BSPTree.cpp  BSPTree.hpp  DArray.hpp  FArray.hpp  SparseSet.hpp
src/core/: Abort.hpp  AppTime.hpp  Assert.hpp  Hash.hpp  Logging.cpp  Logging.hpp  Platform.hpp  Profiler.hpp  Random.cpp  Random.hpp  Window.hpp
src/core/platform/: Platform_win32.cpp  Window_win32.cpp
src/ecs/: ComponentCreateInfo.hpp  ComponentFactory.hpp  ComponentRegistry.inl  ECS.cpp  ECS.hpp  Entity.hpp
src/ecs/components/: Camera.hpp  FlyCam.hpp  MeshRenderer.cpp  MeshRenderer.hpp  PointCloudRenderer.cpp  PointCloudRenderer.hpp  PointLight.hpp  SdfPointCloudRenderer.cpp  SdfPointCloudRenderer.hpp  SdfRenderer.cpp  SdfRenderer.hpp  SdfVoxelGrid.cpp  SdfVoxelGrid.hpp  Skybox.cpp  Skybox.hpp  Sprite.cpp  Sprite.hpp  Transform.hpp  UIImage.hpp
src/ecs/managers/: Component.hpp  SystemManager.cpp  SystemManager.hpp
src/ecs/systems/: CameraSystem.cpp  CameraSystem.hpp  FlyCamSystem.cpp  FlyCamSystem.hpp  SpriteSystem.hpp  TransformSystem.hpp
src/filesystem/: AssetDatabase.cpp  AssetDatabase.hpp  FileSystem.cpp  FileSystem.hpp  RawAssetData.hpp
src/filesystem/internal/: gltf.hpp  stb_image.cpp
src/filesystem/platform/: FileSystem_win32.cpp
src/geometry/: BoundingBox2D.hpp  BoundingBox3D.hpp  ConvexHull.cpp  ConvexHull.hpp  Eigen.cpp  Eigen.hpp  Mesh.cpp  Mesh.hpp  MeshGeometry.cpp  MeshGeometry.hpp  Plane.hpp  PointCloud.cpp  PointCloud.hpp  PrimitiveData.hpp  Triangle.hpp  Triangulation.cpp  Triangulation.hpp  Vertex.cpp  Vertex.hpp
src/input/: Cursor.hpp  Input.cpp  Input.hpp  Keycodes.hpp
src/input/platform/: Cursor_win32.cpp  Input_win32.cpp
src/math/: Math.hpp
src/math/internal/: Common.hpp  Matrix.hpp  Quaternion.hpp
src/memory/: PoolAllocator.cpp  PoolAllocator.hpp  StackAllocator.hpp
src/preprocessor/: CommaListArgs.hpp  Counter.hpp  ForEachArg.hpp  HasFunction.hpp  Utility.hpp
src/renderer/: Gizmos.cpp  Gizmos.hpp  GraphicsPipeline.hpp  Material.cpp  Material.hpp  Renderer.cpp  Renderer.hpp  SamplerFilter.hpp  Texture2D.cpp  Texture2D.hpp  UniformBufferObjects.hpp
src/renderer/vk/: Buffer.cpp  Buffer.hpp  CommandPool.cpp  CommandPool.hpp  Device.hpp  Image.cpp  Image.hpp  Swapchain.hpp  Vulkan.hpp  vkExtensions.inl  vkPlatform.hpp  vkUtil.cpp  vkUtil.hpp  vkValidation.inl
src/renderer/vk/platform/: vkPlatform_win32.cpp
src/threading/: JobHandle.hpp  JobSystem.cpp  JobSystem.hpp  Thread.hpp
src/threading/platform/: Thread_win32.cpp
src/threading/sync/: Flag.hpp  Latch.hpp
src/ui/: UI.cpp  UI.hpp
src/world/: World.hpp  WorldManager.cpp  WorldManager.hpp  WorldRegistry.hpp
src/world/worlds/: DissWorld.cpp  DissWorld.hpp
